# Mid-Term

./: CMakeLists.txt  CP_Professor.cpp  CP_Professor.h  Employee.cpp  Employee.h  Person.cpp  Person.h  Professor.cpp  Professor.h  Speaking_Professor.cpp  Speaking_Professor.h  Student.cpp  Student.h  University.cpp  University.h  main.cpp
