cmake_minimum_required(VERSION 3.21)
project(MidtermDRAFT)

set(CMAKE_CXX_STANDARD 14)

add_executable(MidtermDRAFT main.cpp University.cpp University.h Person.cpp Person.h Student.cpp Student.h Employee.cpp Employee.h Professor.cpp Professor.h CP_Professor.cpp CP_Professor.h Speaking_Professor.cpp Speaking_Professor.h)
